WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243545
REGRESSION(
252611@main
): [ macOS ] http/tests/cache/willsendrequest-returns-null-for-memory-cache-load.html is a constant crash
https://bugs.webkit.org/show_bug.cgi?id=243545
Summary
REGRESSION(252611@main): [ macOS ] http/tests/cache/willsendrequest-returns-n...
Hercules Hjalmarsson
Reported
2022-08-04 08:43:36 PDT
http/tests/cache/willsendrequest-returns-null-for-memory-cache-load.html This bug is consistently crashing on macOS ToT and since
252611@main
. Before that it was failing expectedly. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fcache%2Fwillsendrequest-returns-null-for-memory-cache-load.html
DIFF: No crash log found for DumpRenderTree:21314. stdout: stderr: ASSERTION FAILED: error.isCancellation() loader/ResourceLoadNotifier.cpp(189) : void WebCore::ResourceLoadNotifier::sendRemainingDelegateMessages(WebCore::DocumentLoader *, WebCore::ResourceLoaderIdentifier, const WebCore::ResourceRequest &, const WebCore::ResourceResponse &, const WebCore::SharedBuffer *, int, int, const WebCore::ResourceError &) 1 0x102585990 WTFCrash 2 0x12b153ec0 WebCore::JSDOMGlobalObject* JSC::jsCast<WebCore::JSDOMGlobalObject*, JSC::JSGlobalObject>(JSC::JSGlobalObject*) 3 0x12ee7acb8 WebCore::ResourceLoadNotifier::sendRemainingDelegateMessages(WebCore::DocumentLoader*, WTF::ObjectIdentifier<WebCore::ResourceLoader>, WebCore::ResourceRequest const&, WebCore::ResourceResponse const&, WebCore::SharedBuffer const*, int, int, WebCore::ResourceError const&) 4 0x12edfb7fc WebCore::FrameLoader::loadedResourceFromMemoryCache(WebCore::CachedResource&, WebCore::ResourceRequest&, WebCore::ResourceError&) 5 0x12ef3b5b8 WebCore::CachedResourceLoader::shouldContinueAfterNotifyingLoadedFromMemoryCache(WebCore::CachedResourceRequest const&, WebCore::CachedResource&, WebCore::ResourceError&) 6 0x12ef388fc WebCore::CachedResourceLoader::requestResource(WebCore::CachedResource::Type, WebCore::CachedResourceRequest&&, WebCore::CachedResourceLoader::ForPreload, WebCore::ImageLoading) 7 0x12ef3688c WebCore::CachedResourceLoader::requestImage(WebCore::CachedResourceRequest&&, WebCore::ImageLoading) 8 0x12ee1f6e8 WebCore::ImageLoader::updateFromElement(WebCore::RelevantMutation) 9 0x12ee20028 WebCore::ImageLoader::updateFromElementIgnoringPreviousError(WebCore::RelevantMutation) 10 0x12e5f6324 WebCore::HTMLImageElement::selectImageSource(WebCore::RelevantMutation) 11 0x12e5f6878 WebCore::HTMLImageElement::parseAttribute(WebCore::QualifiedName const&, WTF::AtomString const&) 12 0x12e13df74 WebCore::Element::attributeChanged(WebCore::QualifiedName const&, WTF::AtomString const&, WTF::AtomString const&, WebCore::Element::AttributeModificationReason) 13 0x12e2df208 WebCore::StyledElement::attributeChanged(WebCore::QualifiedName const&, WTF::AtomString const&, WTF::AtomString const&, WebCore::Element::AttributeModificationReason) 14 0x12e5f6520 WebCore::HTMLImageElement::attributeChanged(WebCore::QualifiedName const&, WTF::AtomString const&, WTF::AtomString const&, WebCore::Element::AttributeModificationReason) 15 0x12e140bf0 WebCore::Element::parserSetAttributes(WTF::Vector<WebCore::Attribute, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&) 16 0x12e88ee74 WebCore::setAttributes(WebCore::Element&, WTF::Vector<WebCore::Attribute, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&, WebCore::HasDuplicateAttribute, WebCore::ParserContentPolicy) 17 0x12e88c4a8 WebCore::setAttributes(WebCore::Element&, WebCore::AtomHTMLToken&, WebCore::ParserContentPolicy) 18 0x12e88eba4 WebCore::HTMLConstructionSite::createHTMLElementOrFindCustomElementInterface(WebCore::AtomHTMLToken&, WebCore::JSCustomElementInterface**) 19 0x12e88e0e0 WebCore::HTMLConstructionSite::createHTMLElement(WebCore::AtomHTMLToken&) 20 0x12e88ef8c WebCore::HTMLConstructionSite::insertSelfClosingHTMLElement(WebCore::AtomHTMLToken&&) 21 0x12e8cd38c WebCore::HTMLTreeBuilder::processStartTagForInBody(WebCore::AtomHTMLToken&&) 22 0x12e8c7484 WebCore::HTMLTreeBuilder::processStartTag(WebCore::AtomHTMLToken&&) 23 0x12e8c6838 WebCore::HTMLTreeBuilder::processToken(WebCore::AtomHTMLToken&&) 24 0x12e8c5660 WebCore::HTMLTreeBuilder::constructTree(WebCore::AtomHTMLToken&&) 25 0x12e89bbe8 WebCore::HTMLDocumentParser::constructTreeFromHTMLToken(WebCore::HTMLTokenizer::TokenPtr&) 26 0x12e89b96c WebCore::HTMLDocumentParser::pumpTokenizerLoop(WebCore::HTMLDocumentParser::SynchronousMode, bool, WebCore::PumpSession&) 27 0x12e89abb8 WebCore::HTMLDocumentParser::pumpTokenizer(WebCore::HTMLDocumentParser::SynchronousMode) 28 0x12e89a3ec WebCore::HTMLDocumentParser::pumpTokenizerIfPossible(WebCore::HTMLDocumentParser::SynchronousMode) 29 0x12e89c3cc WebCore::HTMLDocumentParser::append(WTF::RefPtr<WTF::StringImpl, WTF::RawPtrTraits<WTF::StringImpl>, WTF::DefaultRefDerefTraits<WTF::StringImpl> >&&, WebCore::HTMLDocumentParser::SynchronousMode) 30 0x12e89c200 WebCore::HTMLDocumentParser::append(WTF::RefPtr<WTF::StringImpl, WTF::RawPtrTraits<WTF::StringImpl>, WTF::DefaultRefDerefTraits<WTF::StringImpl> >&&) 31 0x12e034b34 WebCore::DecodedDataDocumentParser::flush(WebCore::DocumentWriter&) DIFF URL:
https://build.webkit.org/results/Apple-BigSur-Debug-AppleSilicon-WK1-Tests/252613@main%20(7489)/http/tests/cache/willsendrequest-returns-null-for-memory-cache-load-crash-log.txt
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-08-04 08:44:08 PDT
<
rdar://problem/98127995
>
Hercules Hjalmarsson
Comment 2
2022-08-04 08:46:45 PDT
I was able to bisect this issue to
252611@main
by running command: run-webkit-tests --debug http/tests/cache/willsendrequest-returns-null-for-memory-cache-load.html Build
252610@main
(macOS Debug) is only available by downloading it similar to the bots.
Chris Dumez
Comment 3
2022-08-04 08:48:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3012
EWS
Comment 4
2022-08-04 09:18:21 PDT
Committed
253116@main
(b19197388e2b): <
https://commits.webkit.org/253116@main
> Reviewed commits have been landed. Closing PR #3012 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug