REGRESSION(252611@main): [ macOS ] http/tests/cache/willsendrequest-returns-null-for-memory-cache-load.html is a constant crash https://bugs.webkit.org/show_bug.cgi?id=243545 <rdar://98127995>

Reviewed by Darin Adler.

Since 252611@main, blocked loads are reported as AccessControl errors instead of Cancellation
errors. We thus need to update the assertion in ResourceLoadNotifier::sendRemainingDelegateMessages()
accordingly.

* Source/WebCore/loader/ResourceLoadNotifier.cpp:
(WebCore::ResourceLoadNotifier::sendRemainingDelegateMessages):

Canonical link: https://commits.webkit.org/253116@main